--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/shop.css">
   <link href="https://fonts.googleapis.com/css?family=Anton|Fjalla+One|Oswald|Pattaya|Poiret+One" rel="stylesheet">
   <title>CHERI CHERI</title>
 </head>
@@ -14,7 +14,23 @@
     <div class="two" id=d1></div>
     <div class="two" id=d2></div>
     <div class="two" id=d3>
-
+      <img src="assets/jar1.jpg" alt="image">
+      <img src="assets/jar1.jpg" alt="image">
+      <img src="assets/jar3.jpg" alt="image">
+      <img src="assets/jar4.jpg" alt="image">
+      <img src="assets/honey.jpg" alt="image">
+      <img src="assets/opartwater.jpg" alt="image">
+      <img src="assets/roses.jpg" alt="image">
+      <img src="assets/greencurtain.jpg" alt="image">
+      <img src="assets/girlssmoking.jpg" alt="image">
+      <img src="assets/flower1.jpg" alt="image">
+      <img src="assets/flower2.jpg" alt="image">
+      <img src="assets/cream1.jpg" alt="image">
+      <img src="assets/cherry2.jpg" alt="image">
+      <img src="assets/cherry1.jpg" alt="image">
+      <img src="assets/smoke3.jpg" alt="image">
+      <img src="assets/smoke4.jpg" alt="image">
+      <img src="assets/smoke5.jpg" alt="image">
     </div>
     <div class="two" id=d4></div>
     <div class="sidenav">
